<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/linearLayout"
    android:background="@color/background_green" >

    <ImageView
        android:id="@+id/topLeftDots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_marginEnd="50dp"/>

    <TextView
        android:theme="@style/loginFont"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:gravity="center"
        android:layout_margin="15dp"/>

    <TextView
        android:theme="@style/loginFont"
        android:id="@+id/titlePt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/excited"
        android:gravity="center" />

    <TextView
        android:theme="@style/loginFont"
        android:id="@+id/titlePt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_should_be"
        android:textSize="30sp"
        android:gravity="center" />

    <TextView
        android:theme="@style/subLoginFont"
        android:id="@+id/titleSmallPt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_google"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"/>

    <Button
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:id="@+id/loginButton"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/white"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColor="@color/buttonColor"
        android:text="@string/log_in" />

    <TextView
        android:theme="@style/subLoginFont"
        android:id="@+id/titleSmallPt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or_sign_up_if_you_are_new"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"/>

    <Button
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:id="@+id/signUpButton"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/white"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColor="@color/buttonColor"
        android:text="@string/sign_up" />

    <ImageView
        android:id="@+id/botRightDots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="50dp"/>




</LinearLayout>